--- a/templates/FrontEnd/UniqueAjouterUnePublication.html.twig
+++ b/templates/FrontEnd/UniqueAjouterUnePublication.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Ajouter une publication{% endblock %}
 
 {% block body %}
-<div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
+<div class="d-flex justify-content-end position-fixed top-0 start-0 m-3">
     <a href="{{ app.request.headers.get('referer') }}">
-        <img class="icon-page-precedente" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
+        <img class="icone-cliquable" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
     </a>
 </div>
 
