--- a/templates/BackEnd/Administrateur/voirUnEmploye.html.twig
+++ b/templates/BackEnd/Administrateur/voirUnEmploye.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Voir un employé{% endblock %}
 
 {% block body %}
-<div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
+<div class="d-flex justify-content-end position-fixed top-0 start-0 m-3">
     <a href="{{ path('app_liste_des_employes') }}">
-        <img class="icon-page-precedente" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
+        <img class="icone-cliquable" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
     </a>
 </div>
 
@@ -21,7 +21,9 @@
                     <span class="card-text"><span class="fw-bold">Médias de contact :</span> {% for m in employe.mediasDeContact %}{{m|lower|capitalize}}{% if not(loop.last) %} , {% endif %}{% endfor %}</span>
                     <span class="card-text mt-2 mb-2">{{employe.rueEtNumero}}, {{employe.codePostal}} {{employe.ville}}</span>
                     <span class="card-text"><span class="fw-bold">Société :</span> {{employe.societe}}</span>
-                    <a href="{{ path('app_editer_un_employe' , {id : employe.id}) }}" class="btn btn-outline-light btn-sm w-25 mx-auto shadow mt-4" class="btn btn-outline-light btn-sm w-50" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Editer">&#x1f4dd;</a>
+                    <a href="{{ path('app_editer_un_employe' , {id : employe.id}) }}" class="btn btn-outline-light btn-sm w-25 mx-auto shadow mt-4" class="btn btn-outline-light btn-sm w-50" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Editer">
+                    {# &#x1f4dd; #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_edition.png') }}" alt="Icône non trouvé."></img>
+                    </a>
                 </div>
             </div>
         </div>
