--- a/templates/FrontEnd/AfficherFAC.html.twig
+++ b/templates/FrontEnd/AfficherFAC.html.twig
@@ -4,9 +4,9 @@
 
 {% block body %}
 
-<div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
+<div class="d-flex justify-content-end position-fixed top-0 start-0 m-3">
     <a href="{{ path('app_voir_un_contrat' , { id : contrat.id }) }}">
-        <img class="icon-page-precedente" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
+        <img class="icone-cliquable" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
     </a>
 </div>
 
@@ -59,19 +59,23 @@
 
     <div class="d-flex flex-row mb-3">
         <form action="{{ path('app_unique_editer_une_publication' , {id: publication.id}) }}" method="POST">
-            <button type="submit" class="btn btn-outline-light btn-sm me-3" data-bs-custom-class="custom-tooltip-edition" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Editer la publication">&#x1f4dd;</button>
+            <button type="submit" class="btn btn-sm shadow me-3" data-bs-custom-class="custom-tooltip-edition" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Editer la publication">
+            {# &#x1f4dd; #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_edition.png') }}" alt="Icône non trouvé."></img>
+            </button>
         </form>
 
         <form action="{{ path('app_ajouter_un_commentaire_a_une_publication', {idPublication: publication.id}) }}" method="post">
             <input type="hidden" name="_token" value="{{ csrf_token('ajouter_un_commentaire_' ~ publication.id) }}">
-            <button type="submit" class="btn btn-outline-light btn-sm me-3" data-bs-custom-class="custom-tooltip-ajout" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Ajouter un commentaire">&#x2795;</button>
+            <button type="submit" class="btn btn-sm shadow me-3" data-bs-custom-class="custom-tooltip-ajout" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Ajouter un commentaire">
+            {# &#x2795; #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_ajouter.png') }}" alt="Icône non trouvé."></img>
+            </button>
         </form>
 
         <form id="delete-form-{{ publication.id }}" action="{{ path('app_supprimer_une_publication', {id: publication.id}) }}" method="post">
             <input type="hidden" name="_token" value="{{ csrf_token('supprimer_une_publication_' ~ publication.id) }}">
         </form>
         <div data-bs-custom-class="custom-tooltip-delete" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Supprimer la publication">
-            <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal-{{ publication.id }}">
+            <button type="button" class="btn btn-sm shadow" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal-{{ publication.id }}">
                 &#x1f5d1;
             </button>
         </div>
