--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,8 +30,10 @@
             <div class="t-3">Compte client</div>
         </header>
 
-        <div class="d-flex justify-content-end position-fixed top-0 start-0 m-3" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Déconnexion">
-            <a href="{{ path('app_logout') }}" class="btn btn-sm btn-outline-light border border-2 border-opacity-10">&#x1F6AA;</a>
+        <div class="d-flex justify-content-end position-fixed top-0 end-0 m-3" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Déconnexion">
+            <a href="{{ path('app_logout') }}" class="">
+            {# &#x1F6AA; #}<img class="icone-cliquable" src="{{ asset('assets/images/icone_deconnexion.png') }}" alt="Icône non trouvé."></img>
+            </a>
         </div>
 
         <div class="container">
